--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,20 +1,45 @@
-<nav class="navbar navbar-expand navbar-light bg-light">
-  <div class="container">
-  <a class="navbar-brand">e-Motion</a>
-  <div class="collapse navbar-collapse">
-   <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-     <a class="nav-link">Accueil</a>
-    </li>
-   </ul>
-   <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-     <a class="nav-link">Connexion</a>
-    </li>
-    <li class="nav-item">
-     <a class="nav-link">Inscription</a>
-    </li>
-   </ul>
-  </div>
- </div>
+<nav class="navbar navbar-expand  py-5 px-0 mb-0" style="background-color: rgb(96, 206, 70)">
+    <a class="navbar-brand py-0 px-3" style="background-color: green"></a>
+</nav>
+<nav class="navbar navbar-expand navbar-light bg-light py-0 px-0 mb-0">
+    <a class="navbar-brand py-0 px-3" href="#" style="background-color: white">
+      <img width="150px" [src]="urlLogo" />
+    </a>
+    <div class="float-left collapse navbar-collapse" id="navbarMain">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <h5 class="mb-0 text-black text-italic nav-link"><span id="appTitle" [innerText]="appTitle"></span></h5>
+        </li>
+      </ul>
+    </div>
+    <div class="float-right py-3 px-3 pr-5">
+      <span class="navbar-text text-black">
+          <ul class="navbar-nav mr-auto">
+            <li id="nav-accueil" class="nav-item">
+              <a class="nav-link"
+                [routerLinkActive]="['active']"
+                [routerLink]="'home'">Accueil</a>
+            </li>
+            <li id="nav-inscription" class="nav-item">
+              <a class="nav-link"
+                [routerLinkActive]="['active']"
+                [routerLink]="'inscription'">Inscription</a>
+            </li>
+            <li id="nav-connexion" class="nav-item">
+              <a class="nav-link"
+                [routerLinkActive]="['active']"
+                [routerLink]="'connexion'">Connexion</a>
+            </li>
+          </ul>
+      </span>
+    </div>
+    <div class="float-right pr-5">
+        <span class="navbar-text text-black">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <span>Barre de rechercher</span>
+                </li>
+            </ul>
+        </span>
+      </div>
 </nav>
