mise en forme footer

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -4,7 +4,7 @@
   </div>
 </nav>-->
 
-<nav class="navbar navbar-expand navbar-light bg-light py-0 px-0 mb-0 fixed-bottom" style="background-color: rgba(0, 0, 0, 0.9)">
+<nav class="navbar navbar-expand footer fixed-bottom py-5 px-0 mb-0">
       <div class="navbar-expand m-auto navbar-text">
           <div class="copy">
               &copy; <span [innerText]="yearNow"></span>&nbsp;<span> e-Motus Groupe </span>
@@ -18,4 +18,3 @@
       </div>
 
     </nav>
-
