minor modif routing

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand py-0 px-3" style="background-color: green"></a>
 </nav>
 <nav class="navbar navbar-expand navbar-light bg-light py-0 px-0 mb-0">
-    <a class="navbar-brand py-0 px-3" href="#" style="background-color: white">
+    <a class="navbar-brand py-0 px-3" href="/home" style="background-color: white">
       <img width="150px" [src]="urlLogo" />
     </a>
     <div class="float-left collapse navbar-collapse" id="navbarMain">
@@ -19,11 +19,6 @@
               <a class="nav-link"
                 [routerLinkActive]="['active']"
                 [routerLink]="'home'">Accueil</a>
-            </li>
-            <li id="nav-inscription" class="nav-item">
-              <a class="nav-link"
-                [routerLinkActive]="['active']"
-                [routerLink]="'inscription'">Inscription</a>
             </li>
             <li id="nav-connexion" class="nav-item">
               <a class="nav-link"
