modif header & footer

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -4,17 +4,18 @@
   </div>
 </nav>-->
 
-<nav class="navbar navbar-expand footer fixed-bottom py-5 px-0 mb-0">
-      <div class="navbar-expand m-auto navbar-text">
-          <div class="copy">
-              &copy; <span [innerText]="yearNow"></span>&nbsp;<span> e-Motus Groupe </span>
-          </div>
-          <div class="contenu">
-            <div class="in">
-              &nbsp;
+<nav class="navbar navbar-expand footer sticky-bottom py-5 px-0 mb-0">
+  <div class="navbar-expand m-auto navbar-text">
+      <div class="copy">
+          &copy; <span [innerText]="yearNow"></span>&nbsp;<span> e-Motus Groupe </span>
+          <i class="fa fa-heart"></i>
+        </div>
+      <div class="contenu">
+        <div class="in">
+          &nbsp;
 
-            </div>
-          </div>
+        </div>
       </div>
+  </div>
 
-    </nav>
+</nav>
