minor modif on AppComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="margin-top: 4%; margin-left: 6%; margin-right: 6%">
-    <app-header [urlLogo]="urlLogo" [appTitle]="appTitle"></app-header>
+  <app-header [urlLogo]="urlLogo" [appTitle]="appTitle" [role]="role"></app-header>
 
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
-    <app-footer [yearNow]="yearNow"></app-footer>
+  <app-footer [yearNow]="yearNow"></app-footer>
 </div>
