form authentification html

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -46,7 +46,7 @@
             </div>
           </li>
           <li id="nav-location" class="nav-item pr-3">
-              <button type="button" class="btn btn-light" [routerLinkActive]="['active']" [routerLink]="'location'">Trouver une location</button>
+              <button type="button" class="btn btn-light" [routerLinkActive]="['active']" [routerLink]="'location'">Réservation</button>
             <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
           </li>
         </ul>
