--- a/src/app/public/register/register/register.component.html
+++ b/src/app/public/register/register/register.component.html
@@ -1,1 +1,69 @@
-<p>register works!</p>
+<br>
+<div class="card">
+    <h5 class="card-header text-center">Inscription</h5>
+    <div class="card-body">
+        <form>
+            <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputEmail">Email</label>
+                <input type="email" required class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" required class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            </div>
+            <br>
+            <h5 class="card-header text-center">Personnel</h5>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputFirstName">Prenom</label>
+                    <input type="text"required class="form-control" id="inputFirstName" placeholder="Prenom">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputLastName">Nom</label>
+                    <input type="text" required class="form-control" id="inputLastName" placeholder="Nom">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputBreath">Date de Naissance</label>
+                    <input type="date" required class="form-control" id="inputBreath">
+                </div>                
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputPhone">Téléphone</label>
+                    <input type="texte" required class="form-control" id="inputPhone"  placeholder="06........">
+                </div>                
+                <div class="form-group col-md-4">
+                    <label for="inputPermit">Numero de permit</label>
+                    <input type="text" required class="form-control" id="inputPermit" placeholder="AZERTYUIOP" >
+                </div>
+            </div>
+            
+        <h5 class="card-header text-center">Adresse</h5>
+            <div class="form-row">  
+                <div class="form-group col-md-4">
+                <label for="inputNum">Numero</label>
+                <input type="text" required class="form-control" id="inputNum" placeholder="1234">
+                </div>
+                <div class="form-group col-md-4">
+                <label for="inputRue">Rue </label>
+                <input type="text" required class="form-control" id="inputRue" placeholder="Boulevard, Rue, or Place">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputCity">Ville</label>
+                    <input type="text" required class="form-control" id="inputCity" placeholder="Paris, Lyon">
+                </div>
+                <div class="form-group col-md-4"> 
+                    <label for="inputZip">Code Postale</label>
+                    <input type="text" required class="form-control" id="inputZip" placeholder="75000">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary col-md-2">Valider</button>
+
+        </form>
+    </div>
+</div>
+  <br>
