--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="margin-top: 4%; margin-left: 6%; margin-right: 6%">
-  <app-header [urlLogo]="urlLogo" [appTitle]="appTitle" [role]="role"></app-header>
+  <app-header [urlLogo]="urlLogo" [appTitle]="appTitle" [role]="role" [vehicules]="vehicules"></app-header>
 
   <router-outlet></router-outlet>
 
