--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-expand  py-5 px-0 mb-0" style="background-color: rgb(96, 206, 70)" *ngIf="role === 'anonyme'">
   <a class="navbar-brand py-0 px-3" style="background-color: green"></a>
 </nav>
-<nav class="navbar navbar-expand py-3 px-0" *ngIf="role === 'user' || role === 'admin'" style="background-color: rgb(96, 206, 70)">
+<nav class="navbar navbar-expand py-3 px-0" *ngIf="isAuthenticated" style="background-color: rgb(96, 206, 70)">
   <div class="hexagon">
-      <div>
-          <a class="dropdown-item" style="padding: 0.75rem 1.5rem; font-size: 0.8125rem;" [routerLinkActive]="['active']" [routerLink]="'profil'">Profil</a>
+      <div class="vertical-align:middle;">
+        <ng-template #tipProfil>Profil</ng-template>
+          <a class="dropdown-item profilIcon" [tooltip]="tipProfil" [delay]="200" [adaptivePosition]="false"
+          placement="right" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user-circle" style="font-size: 2.89999999rem; padding-left: 3px;"></i></a>
           <!--<a class="dropdown-item" style="padding: 0.75rem 1.5rem; font-size: 2.7rem;" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user"></i></a>-->
       </div>
   </div>
@@ -26,15 +28,11 @@
   <div class="float-left py-3 px-3 pr-3 pl-3">
     <span class="navbar-text text-black">
         <ul class="navbar-nav mr-auto">
-          <li id="nav-profil" class="nav-item pr-3" *ngIf="role === 'user' || role === 'admin'">
-              <button type="button" class="btn btn-light" [routerLinkActive]="['active']" [routerLink]="'profil'">Profil</button>
-            <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'profil'">Profil</a>-->
-          </li>
           <li id="nav-accueil" class="nav-item pr-3">
               <button type="button" class="btn btn-light" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</button>
             <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
           </li>
-          <li id="nav-gestion" class="nav-item pr-3" *ngIf="role === 'admin'">
+          <li id="nav-gestion" class="nav-item pr-3" *ngIf="isAuthenticated && role === 'admin'">
               <button type="button" class="btn btn-light" [routerLinkActive]="['active']" [routerLink]="'gestion'">Administration</button>
           </li>
           <li id="nav-location" class="nav-item pr-3">
@@ -60,32 +58,61 @@
   <div class="float-center pr-2">
       <span class="navbar-text text-black">
         <ul class="navbar-nav mr-auto">
-            <li id="nav-connexion" class="nav-item" *ngIf="role === 'anonyme'">
+            <li id="nav-connexion" class="nav-item" *ngIf="!isAuthenticated">
                 <div class="btn-group">
                   <div class="dropdown">
                       <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Connexion
                       </button>
-                      <div class="dropdown-menu dropdown-menu-right">
-                          <form class="px-4 py-3">
-                            <div class="form-group">
-                              <label for="exampleDropdownFormEmail2">Adresse email</label>
-                              <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="email@example.com">
+                      <div class="dropdown-menu dropdown-menu-right" style="margin-top:5%;padding:0;">
+                          <div class="card" style="padding:0;">
+                            <form #loginForm="ngForm" (ngSubmit)="logIn(loginForm.value)" class="px-3 py-4">
+                              <table class="tableForm" cellspacing="0" width="100%">
+                                <tr>
+                                  <td>
+                                    <div class="form-group" style="width:100%;">
+                                      <label for="mail" style="margin-bottom:0;"><u>Adresse email</u> :</label>
+                                      <input type="email" required class="form-control" placeholder="email@example.com" ngModel name="mail" #mail style="height: 2.5rem;">
+                                      <!--<div [hidden]="mail.valid" class="alert alert-danger">L'email est obligatoire</div>-->
+                                    </div>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    <div fxFlex fxLayout="column">
+                                      <div class="form-group">
+                                        <label for="password" style="margin-bottom:0;"><u>Mot de passe</u> :</label>
+                                        <input class="form-control" required [type]="hideInput ? 'password': 'text'" ngModel name="password" #password style="display:inline-flex;width:75%;height: 2.5rem;">
+                                        <!--<div [hidden]="password.valid">Le mot de passe est obligatoire</div>-->
+                                        <button class="btn btnHide" type="button" style="width: 25%" (click)="hideInput = !hideInput" >
+                                          <span>
+                                            <i [ngClass]="hideInput ? 'far fa-eye' : 'far fa-eye-slash'"></i>
+                                          </span>
+                                        </button>
+                                        <div *ngIf="invalidLogin" class="error">
+                                          <div>Invalid credentials.</div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </td>
+                                </tr>
+                              </table>
+                              <div style="text-align:center;margin: 0 auto 0 auto">
+                                  <button *ngIf="loginForm.form.valid" type="submit" class="btn btn-card btn-primary"
+                                  [disabled]="!loginForm.form.valid" click="reset()">Connexion</button>
+                              </div>
+                            </form>
+                            <div class="dropdown-divider"></div>
+                            <div style="margin-bottom: 2%;">
+                                <a class="dropdown-item" [routerLink]="'register'">Vous n'avez pas encore de compte ?<br>Inscrivez-vous !</a>
                             </div>
-                            <div class="form-group">
-                              <label for="exampleDropdownFormPassword2">Mot de passe</label>
-                              <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Sign in</button>
-                          </form>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" [routerLink]="'register'">Vous n'avez pas encore de compte ?<br>Inscrivez-vous !</a>
+                          </div>
                       </div>
                   </div>
                 </div>
             </li>
-          <li id="nav-deconnexion" class="nav-item" *ngIf="role === 'user' || role === 'admin'">
-              <button type="button" class="btn btn-light">Déconnexion</button>
+          <li id="nav-deconnexion" class="nav-item" *ngIf="isAuthenticated">
+              <button type="button" (click)="logOut()" class="btn btn-light">Déconnexion</button>
           </li>
         </ul>
       </span>
