--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -30,8 +30,7 @@ a.navbar-brand {
   position: relative;
   width: 80px;
   height: 46.19px;
-  background-color: rgb(132,173,122);
-  opacity: 0.50;
+  background-color: rgb(215,242,209); //rgb(132,173,122);
   margin: 23.09px 0;
 }
 
@@ -46,11 +45,36 @@ a.navbar-brand {
 
 .hexagon:before {
   bottom: 100%;
-  border-bottom: 23.09px solid rgb(132,173,122);
+  border-bottom: 23.09px solid rgb(215,242,209); //rgb(132,173,122);
 }
 
 .hexagon:after {
   top: 100%;
   width: 0;
-  border-top: 23.09px solid rgb(132,173,122);
+  border-top: 23.09px solid rgb(215,242,209); // rgb(132,173,122);
+}
+
+.profilIcon {
+  padding: 0;
+  font-size: 0.8125rem;
+  text-align:center;
+  vertical-align: middle;
+}
+
+.error{
+  color: #FF0000;
+}
+
+/*.ng-invalid:not(form) {
+  border-left: 5px  solid red;
+}
+
+.ng-valid:not(form) {
+  border-left: 5px  solid green;
+}*/
+
+.btnHide {
+  border: none;
+  box-shadow: inherit;
+  transition: inherit;
 }
