--- a/src/app/protected/gestion/gestion-vehicules/vehicule-list/vehicule-list.component.html
+++ b/src/app/protected/gestion/gestion-vehicules/vehicule-list/vehicule-list.component.html
@@ -32,7 +32,8 @@
             <ng-template #tipEdit>Consulter</ng-template>
             <button class="btn btn-info btnRounded" [routerLink]="[v.id]" [tooltip]="tipEdit" [delay]="500"><span class="far fa-edit fa-lg"></span></button>
             &nbsp;
-            <button class="btn btn-danger btnRounded"><span class="far fa-trash-alt fa-lg"></span></button>
+            <ng-template #tipDel>Supprimer</ng-template>
+            <button class="btn btn-danger btnRounded" [tooltip]="tipDel" [delay]="500"><span class="far fa-trash-alt fa-lg"></span></button>
           </td>
         </tr>
         <tr>
