--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand  py-5 px-0 mb-0" style="background-color: rgb(96, 206, 70)" *ngIf="role === 'anonyme'">
-  <a class="navbar-brand py-0 px-3" style="background-color: green"></a>
+  <a class="navbar-brand py-0 px-3"></a>
 </nav>
-<nav class="navbar navbar-expand py-3 px-0" *ngIf="isAuthenticated" style="background-color: rgb(96, 206, 70)">
+<nav class="navbar navbar-expand py-3 px-0" *ngIf="isAuthenticated">
   <div class="hexagon">
       <div class="vertical-align:middle;">
-        <ng-template #tipProfil>Profil</ng-template>
+        <ng-template #tipProfil>Profile</ng-template>
           <a class="dropdown-item profilIcon" [tooltip]="tipProfil" [delay]="200" [adaptivePosition]="false"
           placement="right" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user-circle" style="font-size: 2.89999999rem; padding-left: 3px;"></i></a>
           <!--<a class="dropdown-item" style="padding: 0.75rem 1.5rem; font-size: 2.7rem;" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user"></i></a>-->
@@ -18,13 +18,13 @@
   <a class="navbar-brand py-0 px-3" href="#" style="background-color: white">
     <img width="150px" [src]="urlLogo" />
   </a>
-  <div class="float-left collapse navbar-collapse pr-3" id="navbarMain">
+  <!-- <div class="float-left collapse navbar-collapse pr-3" id="navbarMain">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <h5 class="mb-0 text-black text-italic nav-link"><span id="appTitle" [innerText]="appTitle"></span></h5>
       </li>
     </ul>
-  </div>
+  </div>-->
   <div class="float-left py-3 px-3 pr-3 pl-3">
     <span class="navbar-text text-black">
         <ul class="navbar-nav mr-auto">
@@ -71,8 +71,8 @@
                                 <tr>
                                   <td>
                                     <div class="form-group" style="width:100%;">
-                                      <label for="mail" style="margin-bottom:0;"><u>Adresse email</u> :</label>
-                                      <input type="email" required class="form-control" placeholder="email@example.com" ngModel name="mail" #mail style="height: 2.5rem;">
+                                      <label for="mail" style="margin-bottom:0;"><u id="mail">Adresse email</u> :</label>
+                                      <input type="email" required class="form-control" placeholder="email@example.com" ngModel name="username" #mail style="height: 2.5rem;">
                                       <!--<div [hidden]="mail.valid" class="alert alert-danger">L'email est obligatoire</div>-->
                                     </div>
                                   </td>
@@ -81,7 +81,7 @@
                                   <td>
                                     <div fxFlex fxLayout="column">
                                       <div class="form-group">
-                                        <label for="password" style="margin-bottom:0;"><u>Mot de passe</u> :</label>
+                                        <label for="password" style="margin-bottom:0;"><u id="password">Mot de passe</u> :</label>
                                         <input class="form-control" required [type]="hideInput ? 'password': 'text'" ngModel name="password" #password style="display:inline-flex;width:75%;height: 2.5rem;">
                                         <!--<div [hidden]="password.valid">Le mot de passe est obligatoire</div>-->
                                         <button class="btn btnHide" type="button" style="width: 25%" (click)="hideInput = !hideInput" >
