--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,30 +1,7 @@
-<nav class="navbar navbar-expand  py-5 px-0 mb-0" style="background-color: rgb(96, 206, 70)" *ngIf="role === 'anonyme'">
-  <a class="navbar-brand py-0 px-3"></a>
-</nav>
-<nav class="navbar navbar-expand py-3 px-0" *ngIf="isAuthenticated">
-  <div class="hexagon">
-      <div class="vertical-align:middle;">
-        <ng-template #tipProfil>Profile</ng-template>
-          <a class="dropdown-item profilIcon" [tooltip]="tipProfil" [delay]="200" [adaptivePosition]="false"
-          placement="right" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user-circle" style="font-size: 2.89999999rem; padding-left: 3px;"></i></a>
-          <!--<a class="dropdown-item" style="padding: 0.75rem 1.5rem; font-size: 2.7rem;" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user"></i></a>-->
-      </div>
-  </div>
-  <!--<button type="button" class="btn btn-light btn-profil" [routerLinkActive]="['active']" [routerLink]="'profil'">Profil</button>-->
-</nav>
-
-
 <nav class="navbar navbar-expand navbar-light bg-light py-0 px-0 mb-0">
   <a class="navbar-brand py-0 px-3" href="#" style="background-color: white">
     <img width="150px" [src]="urlLogo" />
   </a>
-  <!-- <div class="float-left collapse navbar-collapse pr-3" id="navbarMain">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <h5 class="mb-0 text-black text-italic nav-link"><span id="appTitle" [innerText]="appTitle"></span></h5>
-      </li>
-    </ul>
-  </div>-->
   <div class="float-left py-3 px-3 pr-3 pl-3">
     <span class="navbar-text text-black">
         <ul class="navbar-nav mr-auto">
@@ -114,5 +91,13 @@
           </li>
         </ul>
       </span>
+    </div>
+    <div class="hexagon" *ngIf="isAuthenticated">
+        <div class="vertical-align:middle;">
+            <ng-template #tipProfil>Profile</ng-template>
+            <a class="dropdown-item profilIcon" [tooltip]="tipProfil" [delay]="200" [adaptivePosition]="false"
+               placement="right" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user-circle" style="font-size: 2.89999999rem; padding-left: 3px;"></i></a>
+            <!--<a class="dropdown-item" style="padding: 0.75rem 1.5rem; font-size: 2.7rem;" [routerLinkActive]="['active']" [routerLink]="'profil'"><i class="fas fa-user"></i></a>-->
+        </div>
     </div>
 </nav>
