--- a/src/app/public/register/register/register.component.html
+++ b/src/app/public/register/register/register.component.html
@@ -2,11 +2,11 @@
 <div class="card">
     <h5 class="card-header text-center">Inscription</h5>
     <div class="card-body">
-        <form>
+        <form [formGroup]="registerForm" (ngSubmit)="register(registerForm)">
             <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputEmail">Email</label>
-                <input type="email" required class="form-control" id="inputEmail" placeholder="Email">
+                <input type="email" required class="form-control" id="inputEmail" placeholder="Email" >
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword">Mot de passe</label>
