--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <app-header [urlLogo]="urlLogo" [role]="role" [vehicles]="vehicles"></app-header>
+  <app-header [urlLogo]="urlLogo" [isAuthenticated]="isAuthenticated" [role]="role" [vehicles]="vehicles"></app-header>
 
   <router-outlet></router-outlet>
 
