--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <app-header [urlLogo]="urlLogo" [isAuthenticated]="isAuthenticated" [role]="role" [vehicles]="vehicles"></app-header>
+<app-header [urlLogo]="urlLogo" [user]="user$ | async" [token]="token$ | async" [role]="role"></app-header>
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 
-  <app-footer [yearNow]="yearNow"></app-footer>
-</div>
+<app-footer [yearNow]="yearNow"></app-footer>
