--- a/src/app/protected/manage/manage-vehicles/manage-vehicles.component.html
+++ b/src/app/protected/manage/manage-vehicles/manage-vehicles.component.html
@@ -2,35 +2,16 @@
   <h4 class="mb-2 mr-auto mr-md-none bd-title">Gestionnaire du parc de véhicules</h4>
 </header>
 <main role="main" class="mt-3">
-  <div class="card">
-    <app-vehicule-list [vehicules]="vehicules"></app-vehicule-list>
-    <ng-template #loadingParams>
-        <div class="m-4 alert alert-primary" role="alert">
-          Chargement ...
-        </div>
-    </ng-template>
-  </div>
-  <div class="card mt-2" >
-
-      <div class="card-footer" >
-        <div class="row">
-          <div class="col">
-            Afficher
-            <select >
-              <option value="10">10</option>
-              <option value="20">20</option>
-              <option value="25">25</option>
-              <option value="30">30</option>
-              <option value="40">40</option>
-              <option value="50">50</option>
-              <option value="100">100</option>
-            </select>
-             lignes / page
-          </div>
-          <div class="col">
-
-          </div>
+    <div class="container">
+        <div class="row justify-content-md-center">
+          <app-manage-feature-card *ngFor="let f of features"
+            class="col-md-4" [title]="f.title" [description]="f.description" [icon]="f.icon" [route]="f.route">
+          </app-manage-feature-card>
+          <ng-template #loadingParams>
+              <div class="m-4 alert alert-primary" role="alert">
+                Chargement ...
+              </div>
+          </ng-template>
         </div>
       </div>
-  </div>
 </main>
