--- a/src/app/protected/manage/manage.component.html
+++ b/src/app/protected/manage/manage.component.html
@@ -5,15 +5,15 @@
         <h4 class="bd-title px-4 mb-5">Accès Admin</h4>
         <div class="list-group list-group-flush">
           <a [routerLinkActive]="['active']"
-            [routerLink]="'locations'"
+            [routerLink]="'locationfeature'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-warehouse"></i>&nbsp;Gestion Locations</a>
           <a [routerLinkActive]="['active']"
-            [routerLink]="'utilisateurs'"
+            [routerLink]="'utilisateurfeature'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-users-cog"></i>&nbsp;Gestion Utilisateurs</a>
           <a [routerLinkActive]="['active']"
-            [routerLink]="'vehicules'"
+            [routerLink]="'vehiculefeature'"
             class="list-group-item list-group-item-action py-3">
             <i class="fas fa-car"></i>&nbsp;Gestion Véhicules</a>
         </div>
