--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header [urlLogo]="urlLogo" [user]="user$ | async" [token]="token$ | async" [role]="role"></app-header>
+<app-header [urlLogo]="urlLogo" [user]="user$ | async" [role]="role$ | async"></app-header>
 
 <router-outlet></router-outlet>
 
